    with the Tcl package versioning mechanism.
-------------------------------------------------------------------------------
13 Mar 96:
  o The copyfile command now disables newline translation by default, copying
    data in binary mode.  A new option has been added to allow translation.
===============================================================================
13 Mar 96: Released TclX 7.5.0 Beta 3
===============================================================================
14 Mar 96:
  o Added support for ITcl 2.0 from earlier TclX 7.4 based patch.
  o Modified the commandloop command to support event based command input.
   (* potential incompatibility *)
  o Removed the implicit event loop feature of the TclX added in the previous
    beta.  It could lead to some hard to find problems.
  o Added mainloop procedure to implement top level evant loops in the TclX
    shell that are similar to wish's.
  o Changed the tclx_errorHandler functionality to be consistent with bgerror.
    Uncaught synchronous errors now look for a procedure named
    tclx_errorHandler, rather than a variable which contains a procedure name.
    For backwards compatibility, a check is still made for a variable
    named tclx_errorHandler.  This functionality is deprecated and scripts
    should be change to use the new form.
-------------------------------------------------------------------------------
 6 Apr 96:
  o Added guidelines for creating a pkgIndex.tcl file for use with TclX.  Build
    a prototype file, pkgIndex.proto, that can be merged with other
    pkgIndex.tcl files.
-------------------------------------------------------------------------------
24 Apr 96:
  o Chanced 'mkdir -path' to not return an error if the full path already
    exists.
===============================================================================
25 Apr 96: Released TclX 7.5.0
===============================================================================
