@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Common.mk.in,v 5.15 1996/04/24 06:37:14 markd Exp $
+# $Id: Common.mk.in,v 5.16 1996/04/25 14:32:40 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -58,6 +58,12 @@ TCLX_SHLIB_BASE_NAME = @TCLX_SHLIB_BASE_NAME@
 TCLX_SHLIB_NAME      = @TCLX_SHLIB_NAME@
 TKX_SHLIB_BASE_NAME  = @TKX_SHLIB_BASE_NAME@
 TKX_SHLIB_NAME       = @TKX_SHLIB_NAME@
+
+#------------------------------------------------------------------------------
+# Linker arguments to pick up TclX libraries.
+#
+TCLX_BUILD_LIB_SPEC  = @TCLX_BUILD_LIB_SPEC@
+TKX_BUILD_LIB_SPEC   = @TKX_BUILD_LIB_SPEC@
 
 #------------------------------------------------------------------------------
 # Configuration information from tclConfig.sh and tkConfig.sh. The
