@@ -1146,4 +1146,7 @@
 ===============================================================================
 25 Apr 96: Released TclX 7.5.0
 ===============================================================================
-
+29 Apr 96:
+  o Fixed build problems with shared libraries on Solaris and HP-UX.
+  o Added *LIB_SPEC variables to tclx/tkxConfig.sh.
+-------------------------------------------------------------------------------
